--- a/practice/style.css
+++ b/practice/style.css
@@ -317,6 +317,12 @@ input[type="search"]::-webkit-search-cancel-button {
     margin: 0 0 15px;
 }
 
+/*img {
+   max-width: 100%;
+   height: auto;
+   width: auto\9; /* ie8 */
+}*/
+
 #sidebar {
     width: 280px;
     float: right;
